news source detail with room n unit test

--- a/app/src/main/res/layout/list_item_news_source_detail.xml
+++ b/app/src/main/res/layout/list_item_news_source_detail.xml
@@ -49,10 +49,12 @@
         android:layout_marginStart="12dp"
         android:layout_marginEnd="12dp"
         android:layout_marginTop="12dp"
+        android:layout_marginBottom="12dp"
         android:text="@{`` + news.description}"
         android:textColor="@color/black"
         android:textSize="14sp"
         tools:text="descdescdesc"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/newsIv"
         app:layout_constraintTop_toBottomOf="@+id/newsDetailTitleTv"/>
@@ -66,7 +68,6 @@
         android:layout_marginEnd="12dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="12dp"
-        android:text="@string/add_my_list"
         android:textColor="@color/black"
         android:textSize="14sp"
         android:gravity="center_horizontal"
