--- a/app/src/main/res/layout/list_item_news.xml
+++ b/app/src/main/res/layout/list_item_news.xml
@@ -42,8 +42,8 @@
             android:layout_marginEnd="12dp"
             android:padding="5dp"
             android:text="@{`` + news.description}"
-            android:textColor="@color/black"
-            android:textSize="18sp"
+            android:textColor="@color/dusty_gray"
+            android:textSize="14sp"
             tools:text="blablablablabla"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
