--- a/app/src/main/res/layout/list_item_news_source_detail.xml
+++ b/app/src/main/res/layout/list_item_news_source_detail.xml
@@ -37,6 +37,7 @@
         android:textColor="@color/black"
         android:textSize="18sp"
         tools:text="title"
+        app:layout_constraintBottom_toTopOf="@+id/newsDetailDescTv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/newsIv"
         app:layout_constraintTop_toTopOf="@+id/newsIv"/>
@@ -51,7 +52,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginBottom="12dp"
         android:text="@{`` + news.description}"
-        android:textColor="@color/black"
+        android:textColor="@color/dusty_gray"
         android:textSize="14sp"
         tools:text="descdescdesc"
         app:layout_constraintBottom_toBottomOf="parent"
