--- a/app/src/main/res/layout/list_item_news_source_detail.xml
+++ b/app/src/main/res/layout/list_item_news_source_detail.xml
@@ -81,7 +81,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/black"
+        android:background="@color/dusty_gray"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
