--- a/app/src/main/res/layout/list_item_news_source_detail.xml
+++ b/app/src/main/res/layout/list_item_news_source_detail.xml
@@ -33,9 +33,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginEnd="12dp"
-        android:text="@{`` + news.source.name}"
+        android:text="@{`` + news.title}"
         android:textColor="@color/black"
-        android:textSize="18sp"
+        android:textSize="16sp"
         tools:text="title"
         app:layout_constraintBottom_toTopOf="@+id/newsDetailDescTv"
         app:layout_constraintEnd_toEndOf="parent"
